--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.1.0",
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^11.0.0",
+    "@react-icons/all-files": "^4.1.0",
+    "autoprefixer": "^10.1.0",
+    "framer-motion": "^3.1.1",
     "next": "10.0.4",
+    "postcss": "^8.2.2",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "tailwindcss": "^2.0.2"
   }
 }
