--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "postcss": "^8.2.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-particles-js": "^3.4.1",
+    "react-reveal": "^1.2.2",
     "tailwindcss": "^2.0.2"
   }
 }
