--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
     "@react-icons/all-files": "^4.1.0",
+    "@svgr/webpack": "^5.5.0",
     "autoprefixer": "^10.1.0",
     "framer-motion": "^3.1.1",
     "next": "10.0.4",
+    "next-plugin-svgr": "^1.0.0",
+    "next-react-svg": "^1.1.2",
     "postcss": "^8.2.2",
     "react": "17.0.1",
+    "react-awesome-reveal": "^3.5.1",
     "react-dom": "17.0.1",
     "react-particles-js": "^3.4.1",
-    "react-reveal": "^1.2.2",
     "tailwindcss": "^2.0.2"
+  },
+  "devDependencies": {
+    "babel-plugin-inline-react-svg": "^1.1.2"
   }
 }
