--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.3",
     "@chakra-ui/react": "^1.1.0",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
     "@react-icons/all-files": "^4.1.0",
+    "@reduxjs/toolkit": "^1.5.0",
     "@svgr/webpack": "^5.5.0",
     "autoprefixer": "^10.1.0",
     "framer-motion": "^3.1.1",
@@ -22,7 +24,10 @@
     "react": "17.0.1",
     "react-awesome-reveal": "^3.5.1",
     "react-dom": "17.0.1",
+    "react-image-gallery": "^1.0.8",
     "react-particles-js": "^3.4.1",
+    "sass": "^1.32.4",
+    "swiper": "^6.4.5",
     "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
