--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^1.5.0",
     "@svgr/webpack": "^5.5.0",
     "autoprefixer": "^10.1.0",
+    "formik": "^2.2.6",
     "framer-motion": "^3.1.1",
     "next": "10.0.4",
     "next-plugin-svgr": "^1.0.0",
@@ -26,6 +27,7 @@
     "react-dom": "17.0.1",
     "react-image-gallery": "^1.0.8",
     "react-particles-js": "^3.4.1",
+    "react-star-ratings": "^2.3.0",
     "sass": "^1.32.4",
     "swiper": "^6.4.5",
     "tailwindcss": "^2.0.2"
